# chip8-redux

./: CMakeLists.txt
src/: CMakeLists.txt  chip8.c  chip8.h  frontend.c  frontend.h  log.c  log.h  main.c
src/contrib/include/glad/: gl.h
